Enable CSRF protection

--- a/src/main/resources/templates/new_order.html
+++ b/src/main/resources/templates/new_order.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
 </head>
 <body>
 <h2>Realizar Pedido</h2>
 
- <form action="/realizado" method="post">
-  <label for="products">Selecciona productos:</label>
+<form action="/realizado" method="post">
+    <label for="products">Selecciona productos:</label>
 
-	<select id="products" multiple name="product_list">
-	  {{#products}}
-	  	 <option value="{{name}}">{{name}}</option>	
-	  {{/products}}
-	</select>
-  
-  <input type="submit" value="Comprar">
+    <select id="products" multiple name="product_list">
+        {{#products}}
+        <option value="{{name}}">{{name}}</option>
+        {{/products}}
+    </select>
+
+	<input type="hidden" name="_csrf" value="{{token}}"/>
+
+    <input type="submit" value="Comprar">
 </form>
 </body>
 </html>
