--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -11,11 +11,13 @@
         </td>
 
         <td style="text-align:justify">
-            <form action="/signup" method="POST">
-                <input type="hidden" name="_csrf" value="{{token}}"/>
+<!--            <form action="/signup" method="POST">-->
+<!--                <input type="hidden" name="_csrf" value="{{token}}"/>-->
 
-        		<input type="submit" name="submit" value="Registrarse">
-        	</form>
+<!--        		<input type="submit" name="submit" value="Registrarse">-->
+<!--        	</form>-->
+           <a href="/signup">Registrarse</a>
+
         </td>
 
         <td style="text-align:justify">
@@ -23,7 +25,7 @@
         </td>
 
         <td style="text-align:justify">
-            <a href="/upload_product.html">Nuevo producto</a>
+            <a href="/upload_product">Nuevo producto</a>
         </td>
         
         <td style="text-align:justify">
